fix tooltip z-index, add z-index tokens (#56)
* fix tooltip z-index, add z-index tokens

* change pnpm version in github actions

* change pnpm version 6.0.0 in github actions

* return back pnpm version in github actions

* update pnpm version in github actions

* return back pnpm version in github actions

* update lockfile

* fix eslint

* fix eslint

* fix stylelint

---------

--- a/packages/ui-kit/src/styles/_tokens.scss
+++ b/packages/ui-kit/src/styles/_tokens.scss
@@ -12,6 +12,10 @@
 
   /* effects */
   --tag-box-shadow: 0px 2px 10px rgb(109 109 109 / 25%), inset 0px 1px 0px rgb(255 255 255 / 30%);
+
+  /* z-indexes */
+  --z-index-modal-overlay: 100;
+  --z-index-modal-content: 101;
 }
 
 :root .dark-mode {
